<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <LinearLayout
        android:id="@+id/top_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:orientation="horizontal" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="crash"
            android:text="@string/button_crash" />

        <Button
            android:id="@+id/stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getStats"
            android:text="Get Stats" />    
	</LinearLayout>

    <LinearLayout
        android:id="@+id/query_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:orientation="horizontal" >
    
	    <Button
		    android:id="@+id/init"
		    android:onClick="queryVehicleInit"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/init" />
	
	    <Button
		    android:id="@+id/query"
		    android:onClick="queryVehicle"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/query" />
	    
	    <Button
		    android:id="@+id/poll"
		    android:onClick="pollVehicle"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/poll" />
	    
   	</LinearLayout>
    
    <LinearLayout
        android:id="@+id/status_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/status"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <TextView
            android:id="@+id/BTstatus"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/BTstatus" />

        <TextView
            android:id="@+id/command_sent"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:text="@string/command_sent" />
    </LinearLayout>

    <TextView
        android:id="@+id/response_received_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_received" />

    <TextView
        android:id="@+id/response_received_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_received" />

    <TextView
        android:id="@+id/response_received_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_received" />

    <TextView
        android:id="@+id/response_received_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_received" />

    <TextView
        android:id="@+id/response_received_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_received" />

    <TextView
        android:id="@+id/response_received_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_received" />
    <TextView
        android:id="@+id/fuel_usage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_received" />


</LinearLayout>